--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "the-watoto-library",
   "version": "0.1.0",
+  "homepage": "https://the-watoto-library.web.app/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
@@ -11,8 +12,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^10.5.2",
     "font-awesome": "^4.7.0",
-    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
@@ -25,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +46,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://magnusmoeheide.github.io/the-watoto-library"
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
+  }
 }
